[tool.poetry]
name = "repl_nix_w16"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Jinja2 = "^3.1.2"
Pillow = "^9.5.0"
Flask = "^2.3.2"
Flask-Cors = "^3.0.10"
fabric = "^3.1.0"
typogrify = "^2.0.7"
javascript = "^2015.32.59"
pelican = "^4.8.0"
bs4 = "^0.0.1"
pygame = "^2.4.0"
pytest-browser = "^0.2.0"
gevent = "^22.10.2"
pytz = "^2023.3"
waitress = "^2.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
